# Deep-Learning_Classes

./: main.py  pyproject.toml  requirements.txt  setup.ipynb
session-1/: problem_correction_1_Avner.ipynb
session-2/: problem_correction_2_Avner.ipynb
session-3/: problem correction 3 Avner EL BAZ.ipynb
session-4/: gpt_correction.py  problem_correction_4_Avner.ipynb
session-5/: problem.ipynb
